[gd_scene load_steps=7 format=3 uid="uid://bxk3vj8m4p5kh"]

[ext_resource type="Script" path="res://scripts/game_scene.gd" id="1_game"]
[ext_resource type="Script" path="res://scripts/game_renderer.gd" id="2_renderer"]

[sub_resource type="TileSet" id="TileSet_1"]
tile_size = Vector2i(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(28, 28)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1"]
blend_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 120.0

[node name="GameScene" type="Node2D"]
script = ExtResource("1_game")

[node name="GameRenderer" type="Node2D" parent="."]
script = ExtResource("2_renderer")

[node name="TileMap" type="TileMap" parent="GameRenderer"]
tile_set = SubResource("TileSet_1")
format = 2

[node name="Entities" type="Node2D" parent="GameRenderer"]

[node name="Player" type="CharacterBody2D" parent="GameRenderer/Entities"]
position = Vector2(512, 384)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameRenderer/Entities/Player"]
shape = SubResource("RectangleShape2D_1")

[node name="Sprite" type="ColorRect" parent="GameRenderer/Entities/Player"]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.2, 0.6, 1, 1)

[node name="Camera2D" type="Camera2D" parent="GameRenderer/Entities/Player"]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 5.0

[node name="Effects" type="Node2D" parent="GameRenderer"]

[node name="Lighting" type="Node2D" parent="GameRenderer/Effects"]

[node name="CanvasModulate" type="CanvasModulate" parent="GameRenderer/Effects/Lighting"]
color = Color(0.3, 0.3, 0.4, 1)

[node name="PlayerLight" type="PointLight2D" parent="GameRenderer/Effects/Lighting"]
position = Vector2(512, 384)
energy = 1.5
texture_scale = 4.0
material = SubResource("CanvasItemMaterial_1")

[node name="LightOccluder2D" type="LightOccluder2D" parent="GameRenderer/Effects/Lighting/PlayerLight"]
occluder = SubResource("CircleShape2D_1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameHUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="UI/GameHUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 40.0
value = 75.0

[node name="MinimapViewport" type="SubViewport" parent="UI/GameHUD"]
size = Vector2i(200, 200)

[node name="Minimap" type="Control" parent="UI/GameHUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 220.0
grow_horizontal = 0

[node name="MinimapBorder" type="ReferenceRect" parent="UI/GameHUD/Minimap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0.5, 0.5, 0.5, 1)
border_width = 2.0